# FitGen

./: .gitignore  CMakeLists.txt  FitGen.tex  README.md  abstract.cpp  abstract.h  additional_mutations.h  equation.h  extended_filter.h  filter.cpp  filter.h  fit.cpp  fit.h  fit_gen.cpp  fit_gen.h  fitexception.cpp  fitexception.h  fitpoints.cpp  fitpoints.h  genetic.h  genetic_exception.cpp  genetic_exception.h  initialconditions.cpp  initialconditions.h  paramfunc.h  paramrange.cpp  paramrange.h  params.cpp  paramset.cpp  paramset.h
Example/: CMakeLists.txt  equation.cpp  exact_equation.cpp  fit.cpp  fit_distribution.cpp  fit_foreground_background.cpp  fit_func_err.cpp  fit_one_func.cpp  fit_points.cpp  simple_fit.cpp  system_of_equations.cpp  system_of_equations2.cpp  transcedent_equation.cpp
FitGen_tests/: CMakeLists.txt  basic.cpp  equation.cpp  filter.cpp  fit.cpp  genetic.cpp  initial.cpp  paramset.cpp
Test/: CMakeLists.txt  basic.cpp  equation.cpp  exception.cpp  filter.cpp  fit.cpp  genetic.cpp  initial.cpp  paramset.cpp  testgen.h
include/: abstract.h  equation.h  filter.h  fit.h  genetic.h  initialconditions.h  paramfunc.h
include/Genetic/: abstract.h  equation.h  equation2.h  filter.h  fit.h  genetic.h  initialconditions.h  parabolic.h  paramfunc.h  paramset.h  paramsort.h  searchmin.h  uncertainties.h
src/: CMakeLists.txt  abstract.cpp  equation.cpp  equation2.cpp  filter.cpp  fit.cpp  initialconditions.cpp  parabolic.cpp  paramset.cpp  paramsort.cpp  searchmin.cpp  uncertainties.cpp
tests/: CMakeLists.txt  basic.cpp  engine.h  equation.cpp  equation2.cpp  filter.cpp  fit.cpp  genetic.cpp  initial.cpp  parabolic.cpp  paramset.cpp  paramsort.cpp  uncertainties.cpp
