cmake_minimum_required(VERSION 3.5)
project(FitGen)
option(INSTALL OFF)
if(INSTALL)
    add_compile_options(-std=c++17)
endif()
if( DEFINED MATH_H_INC OR INSTALL)
	get_directory_property(has_parent PARENT_DIRECTORY)
	if(has_parent)
		set(FITGEN_INC 
			${CMAKE_CURRENT_SOURCE_DIR}/include
			${MATH_H_INC}
		PARENT_SCOPE)
	endif()

	if(NOT INSTALL)
	    include_directories(${MATH_H_INC})
	endif()
	include_directories(include)
	install(DIRECTORY include DESTINATION .)
	file(GLOB SOURCES src/*.cpp)
	file(GLOB TESTS tests/*.cpp)
	file(GLOB EXAMPLES Example/*.cpp)
	add_library(FitGen SHARED ${SOURCES})
	install(TARGETS FitGen EXPORT FitGen DESTINATION lib)
	foreach(example ${EXAMPLES})
		get_filename_component(ex_app ${example} NAME_WE)
		add_executable(${ex_app} ${example})
		target_link_libraries(${ex_app} FitGen)
	endforeach()
	if(DEFINED GTEST)
		add_executable(fitgen_test.exe ${TESTS})
		target_link_libraries(fitgen_test.exe FitGen gtest gtest_main)
	endif()
else()
	message(FATAL_ERROR "FitGen subproject requires math_h subproject to add")
endif()
