cmake_minimum_required(VERSION 2.6)
project(FitGenTest)
include_directories($ENV{GTEST_DIR}/include $ENV{GTEST_DIR}/src ..)
link_directories($ENV{GTEST_DIR}/lib)
set(libs gtest gtest_main)
set(files_to_test ../abstract.cpp ../filter.cpp ../genetic_exception.cpp ../initialconditions.cpp ../paramset.cpp ../fit.cpp)
set(tests paramset.cpp basic.cpp initial.cpp filter.cpp fit.cpp)
set(CMAKE_CXX_FLAGS "-fprofile-arcs -ftest-coverage -g -Wall -pthread -std=gnu++11")
add_executable(fitgentest ${tests} ${files_to_test})
target_link_libraries(fitgentest ${libs})